# WPlusPlus

./: .gitignore  ARCHIVE.md  CONTRIBUTE.md  Cargo.toml  DOCS.md  README.md  SYNTAX.md  WPlusPlus.sln  debug.ll  microsoft-story.md  out.ll  test_rust_import.wpp
Docker/: README.md  (+1 more)
wpp-cli/: Cargo.toml  build.rs
wpp-cli/demo/: .simula  wpp.config.hs
wpp-cli/demo/.wpp_cache/: main.wpp
wpp-cli/demo/.wpp_packages/io/: Cargo.toml  demo.wpp  lib.rs  main.wpp
wpp-cli/demo/.wpp_packages/json/: Cargo.toml  lib.rs  libwpp_json_ffi.dylib  main.wpp
wpp-cli/demo/.wpp_packages/math/: main.wpp
wpp-cli/demo/rust_modules/: libio.dylib
wpp-cli/demo/src/: cors_test.wpp  io_test.wpp  json_simple.wpp  main.wpp  main.wpp.backup  test_concat_simple.wpp  test_cors_demo.wpp  test_cors_simple.wpp  test_io_simple.wpp  test_json_simple.wpp  test_minimal.wpp  test_strings.wpp  test_threads.wpp  test_threads_concurrent.wpp  utils.wpp
wpp-cli/src/: api.rs  build.rs  config.rs  generator.rs  main.rs  token_config.rs  wms.rs
wpp-v2/: Cargo.toml  build.rs  debug.ll
wpp-v2/examples/: dispatch_showcase.wpp  dispatch_test.wpp  higher_order_comprehensive.wpp  higher_order_dispatch.wpp  http_dispatch.wpp  http_range.wpp  http_simple.wpp  object_dispatch.wpp  print.wpp  simple_dispatch.wpp  simple_higher_order.wpp  test.wpp
wpp-v2/src/: codegen.rs  export_resolver.rs  lexer.rs  lib.rs  macros.rs  main.rs  module_system.rs  runtime.rs
wpp-v2/src/ast/: expr.rs  mod.rs  node.rs  types.rs
wpp-v2/src/parser/: mod.rs  parser.rs
wpp-v2/src/runtime/: core.rs  http.rs  link_rust.rs  mod.rs  server.rs  thread.rs  validation.rs  wpp_runtime.c
(+206 files in other folders)
