[package]
name = "wpp-v2"
version = "2.0.0-beta"
edition = "2024"

[dependencies]
inkwell = { version = "0.4.0", features = ["llvm15-0"] }
libc = "0.2.176"
once_cell = "1.19"
tokio = { version = "1", features = ["full"] }
url = "2"
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
[build-dependencies]
cc = "1.0"

